--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,12 @@
     <title>React App</title>
     <link
       rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v6.0.0-beta1/css/all.css"
+      integrity="sha384-mQlm5C5ZFlK8Gw4LJ7ZDIjA+xtnc4jynMlY8tOiTZgtBwO1VqL4Og6vKzHa4V5pU"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
